@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
                "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>gnuplot-interface package</title>
+<title><code>gnuplot</code>-interface package</title>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
+<meta name="title" content="<code>gnuplot</code>-interface package"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2011-09-28 09:59:20 EDT"/>
+<meta name="generated" content="2012-02-26 10:28:14 "/>
 <meta name="author" content="Mirko Vukovic"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -44,6 +44,12 @@ lang="en" xml:lang="en">
   dt { font-weight: bold; }
   div.figure { padding: 0.5em; }
   div.figure p { text-align: center; }
+  div.inlinetask {
+    padding:10px;
+    border:2px solid gray;
+    margin:10px;
+    background: #ffffcc;
+  }
   textarea { overflow-x: auto; }
   .linenr { font-size:smaller }
   .code-highlighted {background-color:#ffff00;}
@@ -79,24 +85,177 @@ lang="en" xml:lang="en">
 
 </head>
 <body>
-<div id="content">
 
-<h1 class="title">gnuplot-interface package</h1>
-<p>Low level interface to gnuplot that provides:
+<div id="preamble">
+
+</div>
+
+<div id="content">
+<h1 class="title"><code>gnuplot</code>-interface package</h1>
+
+
+<div id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#sec-1">1 Package features</a></li>
+<li><a href="#sec-2">2 Example of use</a></li>
+<li><a href="#sec-3">3 Platforms</a></li>
+<li><a href="#sec-4">4 Cygwin and <code>wgnuplot</code></a></li>
+<li><a href="#sec-5">5 Caveats</a></li>
+<li><a href="#sec-6">6 To do</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-1" class="outline-2">
+<h2 id="sec-1"><span class="section-number-2">1</span> Package features</h2>
+<div class="outline-text-2" id="text-1">
+
+<p>Low level interface to <code>gnuplot</code> that provides:
 </p><ul>
-<li>start of gnuplot process
+<li>start of <code>gnuplot</code> process
 </li>
-<li>passing raw gnuplot commands
+<li>passing raw <code>gnuplot</code> commands
 </li>
-<li>windows management
+<li>echo printing of sent commands 
 </li>
 </ul>
-<div id="postamble">
-<p class="author">Author: Mirko Vukovic (<a href="mailto:Mirko Vukovic <mirko.vukovic@us.tel.com>">Mirko Vukovic <mirko.vukovic@us.tel.com></a>)</p>
-<p class="date">Date: 2011-09-28 09:59:20 EDT</p>
-<p class="creator">Generated by Org version 7.4 with Emacs version 23</p>
-<p class="xhtml-validation"><a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a></p>
+
+
 </div>
+
+</div>
+
+<div id="outline-container-2" class="outline-2">
+<h2 id="sec-2"><span class="section-number-2">2</span> Example of use</h2>
+<div class="outline-text-2" id="text-2">
+
+<p>  Typical usage:
+</p>
+
+
+<pre class="src src-lisp">(start-gnuplot) <span style="color: #81908f; font-weight: bold;">;; </span><span style="color: #81908f; font-style: italic;">starts the process</span>
+(init-gnuplot) <span style="color: #81908f; font-weight: bold;">;; </span><span style="color: #81908f; font-style: italic;">optional, to initializes terminal</span>
+(hello-world) <span style="color: #81908f; font-weight: bold;">;;  </span><span style="color: #81908f; font-style: italic;">test output</span>
+(command <span style="color: #259185;">"command-string"</span>) <span style="color: #81908f; font-weight: bold;">;; </span><span style="color: #81908f; font-style: italic;">send command to gnuplot</span>
+(echo-command) <span style="color: #81908f; font-weight: bold;">;; </span><span style="color: #81908f; font-style: italic;">sell last sent command</span>
+</pre>
+
+
+<p>
+  For passing complex <code>gnuplot</code> commands that consists of many lines,
+  use the <code>send-line</code> and <code>send-line-break</code> commands
+</p>
+
+
+<pre class="src src-lisp">(<span style="color: #728a05;">do-stuff</span> (action actions)
+   (send-line (action-&gt;string action)))
+(sent-line-break)
+</pre>
+
+
+</div>
+
+</div>
+
+<div id="outline-container-3" class="outline-2">
+<h2 id="sec-3"><span class="section-number-2">3</span> Platforms</h2>
+<div class="outline-text-2" id="text-3">
+
+<p>  The interface was developed and tested on the following platforms
+</p><ul>
+<li>Linux &amp; <code>SBCL</code>
+</li>
+<li>Windows &amp; Cygwin &amp; CLISP
+<ul>
+<li><code>gnuplot</code>
+</li>
+<li><code>wgnuplot</code>
+</li>
+</ul>
+
+</li>
+</ul>
+
+
+</div>
+
+</div>
+
+<div id="outline-container-4" class="outline-2">
+<h2 id="sec-4"><span class="section-number-2">4</span> Cygwin and <code>wgnuplot</code></h2>
+<div class="outline-text-2" id="text-4">
+
+<p>  For use of Cygwin and <code>wgnuplot</code>, one needs to provide the feature
+  <code>:wgnuplot</code>.  Furthermore, one needs to specify the path to the
+  executable.  This is done via <code>:wgnuplot</code>'s property list:
+</p>
+
+
+<pre class="src src-lisp">(setf (symbol-plist <span style="color: #728a05;">:wgnuplot</span>)
+   (list <span style="color: #728a05;">:executable</span> <span style="color: #259185;">"posix compliant path to executable"</span>))
+</pre>
+
+<p>
+For example, the path can be:
+</p><blockquote>
+
+<p>"/c/Program\\ Files/wgnuplot/binary/gnuplot.exe"
+</p>
+</blockquote>
+
+
+<p>
+The double quote of the space in the file-name is necessary. 
+</p>
+</div>
+
+</div>
+
+<div id="outline-container-5" class="outline-2">
+<h2 id="sec-5"><span class="section-number-2">5</span> Caveats</h2>
+<div class="outline-text-2" id="text-5">
+
+<ul>
+<li>stream plumbing is not thoroughly tested
+</li>
+<li>windows management is not implemented
+</li>
+</ul>
+
+
+</div>
+
+</div>
+
+<div id="outline-container-6" class="outline-2">
+<h2 id="sec-6"><span class="section-number-2">6</span> To do</h2>
+<div class="outline-text-2" id="text-6">
+
+<ul>
+<li>multiple windows management
+</li>
+<li>Figure out how to use clisp's <code>ext:run-program</code> instead of
+    <code>ext:make-pipe-io-stream</code>
+<ul>
+<li>That would allow me to use the <code>external-program</code> package
+</li>
+</ul>
+
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+
+<div id="postamble">
+<p class="date">Date: 2012-02-26 10:28:14 </p>
+<p class="author">Author: Mirko Vukovic</p>
+<p class="creator">Org version 7.8.03 with Emacs version 23</p>
+<a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
+
 </div>
 </body>
 </html>
